--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -1,101 +1,84 @@
-#
-# This is free software, lisence use MIT.
-# 
-# Copyright (C) 2019 P3TERX <https://p3terx.com>
-# Copyright (C) 2019 KFERMercer <KFER.Mercer@gmail.com>
-# 
-# <https://github.com/KFERMercer/OpenWrt-CI>
-# 
-
-name: OpenWrt-CI
-
+name: n1 docker OpenWrt CI
 on:
   schedule:
-    - cron: 0 20 * * *
+    - cron:  0 7 * * 6
   push:
-    tags:
-      - '*'
-
+    branches:
+      - master
+    paths:
+      - '.config.n1.docker'
+      - 'n1/**'
+      - '.github/workflows/n1-build.yml'
+  #watch:
+  #  types: [started]
+env:
+  SSH_ACTIONS: false
+    
 jobs:
-
-  build_openwrt:
-
-    name: Build OpenWrt and release
-    runs-on: ubuntu-18.04
-
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: master
 
-      - name: Space cleanup
-        env:
-          DEBIAN_FRONTEND: noninteractive
-        run: |
-          docker rmi `docker images -q`
-          sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
-          sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
-          sudo -E apt-get update
-          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler antlr3 gperf
-          sudo -E apt-get -y autoremove --purge
-          sudo -E apt-get clean
+    - name: Checkout - clone repository
+      uses: actions/checkout@v2
 
-          df -h
-
-      - name: Update feeds
-        run: |
-          sed -i 's/\"#src-git\"/\"src-git\"/g' ./feeds.conf.default
-          ./scripts/feeds update -a
-          ./scripts/feeds install -a
-
-      - name: Generate configuration file
-        run: make defconfig
-
-      - name: Make download
-        run: |
-          make download -j8
-          find dl -size -1024c -exec rm -f {} \;
-
-      - name: Compile firmware
-        run: |
-          make -j$(nproc) || make -j1 V=s
-          echo "======================="
-          echo "Space usage:"
-          echo "======================="
-          df -h
-          echo "======================="
-          du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
-          du -h --max-depth=1 ./build_dir
-          du -h --max-depth=1 ./bin
-
-      - name: Prepare artifact
-        run: find ./bin/targets/ -type d -name "packages" | xargs rm -rf {}
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@master
-        with:
-          name: OpenWrt_firmware
-          path: ./bin/targets/
-
-      - name: Create release
-        if: github.event == 'push'
-        id: create_release
-        uses: actions/create-release@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          draft: false
-          prerelease: false      
-
-      - name: Upload release asset
-        if: github.event == 'push'
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./bin/targets/*/*/
+    - name: Install - system build dependencies
+      run: |
+        sudo swapoff /swapfile
+        sudo rm -rf /swapfile /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        sudo -E apt-get -qq update
+        sudo -E apt-get -yqq install subversion build-essential libncurses5-dev zlib1g-dev gawk git ccache gettext libssl-dev xsltproc zip pigz
+        sudo -E apt-get -yqq autoremove --purge
+        sudo -E apt-get -qq clean
+    - name: Download - openwrt source download
+      run: |
+        git clone -b mod https://github.com/Lienol/lean-lede openwrt
+    
+    - name: mount - link /mnt
+      run: |
+        sudo mkdir -p -m 777 /mnt/openwrt/staging_dir
+        mkdir -p openwrt/staging_dir && ln -s /mnt/openwrt/staging_dir openwrt/staging_dir
+        
+    - name: Update - openwrt source update and install 
+      run: |
+        cd openwrt
+        ./scripts/feeds update -a
+        ./scripts/feeds install -a
+        
+    - name: Config - n1 docker openwrt build config
+      run: |
+        [ -e n1/diy.sh ] && mv n1/diy.sh openwrt/diy.sh
+        cp .config.n1.docker openwrt/.config
+        cd openwrt
+        [ -e diy.sh ] && chmod +x diy.sh && bash diy.sh
+        make defconfig
+        
+    - name: Download - openwrt build dependencies
+      run: |
+        cd openwrt
+        make download -j8
+        
+    - name: Build - make openwrt source
+      run: |
+        cd openwrt
+        make -j$(nproc)
+        
+    - name: Docker file - copy Docker file
+      run: |
+        cp openwrt/bin/targets/armvirt/64/openwrt-armvirt-64-default-rootfs.tar.gz n1
+        sudo cp -r n1 /mnt
+        
+    - name: SSH connection to Actions
+      uses: P3TERX/debugger-action@master
+      if: env.SSH_ACTIONS == 'true'
+        
+    - name: Image - build docker image
+      run: |
+        cd /mnt/n1
+        sudo bash build.sh
+        
+    - name: Upload - push to artifact file
+      uses: actions/upload-artifact@v1
+      with:
+        name: docker-n1
+        path: /mnt/n1/opt/imgs
